[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Characters/Shmelly/Shit.png" type="Texture" id=1]
[ext_resource path="res://Game/Characters/Shmelly/Shit.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.6679

[node name="Shit" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Exist" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Active" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Shit_body_entered"]
[connection signal="timeout" from="Exist" to="." method="_on_Exist_timeout"]
[connection signal="timeout" from="Active" to="." method="_on_Active_timeout"]
